2001-03-26  Ryan Boren <rboren@fuzzybelly.org>

	* backends/print-conf.in (xst_printcap_read): Fix spool
	naming and contents assumptions.

2001-03-22  Michael Meeks  <michael@ximian.com>

	* backends/print-conf.in (xml_print): don't put redundant
	extra print header and footer in.

2001-03-21  Ryan Boren <rboren@fuzzybelly.org>

	* backends/*: my $var -> my ($var) everywhere

	* backends/*: @_[n] -> $_[n] everywhere

	* backends/network-conf.in: Use qw in places.

	* backends/*: forward -> "forward" etc.

	* backends/parse.pl.in, backeds/replace.pl.in: replace
	\n in regexps with $n.
	
2001-03-21  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add print bits.

	* print-conf.in: Add.

	* print.pl.in: Add.

	* parse.pl.in (xst_shell_escape): split from
	(xst_parse_sh): here.
	(xst_parse_sh_export): impl.

2001-03-21  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (xml_scan): We need raw xml and slightly modified from xst_xml_scan.
	(save_profiles): Implement.

	* file.pl.in (xst_file_get_data_path): Implement.
	(xst_buffer_save): Now it can write one line of text also.

	* users-conf.in (xml_print_profiles): Don't print empty tags if no profiles defined.

2001-03-20  Arturo Espinosa  <arturo@ximian.com>

	Bug fixes for Debian port to work well.
	
	* network.pl.in (xst_network_interface_activate):
	  renamed to xst_network_interface_active.
	  (xst_network_deb22_get_file): found what this
	  function does. It should trivialy return $dev.
	  (xst_network_deb22_replace_bootproto): "none"
	  is mapped to "static", not the other way. Also,
	  the stanza value to replace is the 2nd, not 3rd.
	  (xst_network_debian_replace_remote_address): the
	  option name is "up", not "on".
	  (xst_network_get_interfaces_parse_table): features
	  not supported by distro are trivialy set to some
	  default value.
	* replace.pl.in (xst_replace_interfaces_get_next_option):
	  backtrack if last lines found were empty lines, so